Portfolio complete, fixed jumping issue with scroll bar present

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+html { 
+	width: 100vw;
+    overflow-x: hidden; 
+}
+
+*:focus {
+	outline: none;
+}
+
 body {
 	background-image: url("../images/darkWood.png");
 	background-repeat: repeat;
@@ -11,7 +20,7 @@ body {
 
 header {
 	height:100px;
-	width: 100%;
+	width: 100vw;
 	background-color: #ffffff;
 	border-color: #cccccc;
 	position: fixed;
@@ -32,7 +41,7 @@ section {
 
 footer {
 	position: fixed;
-	width: 100%;
+	width: 100vw;
 	background-color: #666666;
 	bottom: 0px;
 	left: 0px;
@@ -94,7 +103,7 @@ li a {
     padding: 5px;
     margin: 5px;
     text-decoration: none;
-    border-radius: 8px;
+    border-radius: 5px;
 }
 
 li a:hover, li a:active, li a:focus {
@@ -111,6 +120,7 @@ input[type="text"] {
     margin-bottom: 20px;
     box-sizing: border-box;
     border: 1px solid #777777;
+    border-radius: 5px;
     color: #777777;
 }
 
@@ -124,6 +134,7 @@ input[type="email"] {
     margin-bottom: 20px;
     box-sizing: border-box;
     border: 1px solid #777777;
+    border-radius: 5px;
     color: #777777;
 }
 
@@ -132,7 +143,7 @@ input[type="email"]:focus {
 }
 
 input[type="email"]:invalid {
-	border: 1px solid red;
+	border-left: 3px solid red;
 }
 
 input[type=submit] {
@@ -160,6 +171,7 @@ textarea {
     border: 1px solid #777777;
     resize: none;
     margin-bottom: 20px;
+    border-radius: 5px;
 }
 
 textarea:focus {
@@ -187,6 +199,7 @@ textarea:focus {
 	width: 920px;
 	padding: 20px;
 	margin: auto;
+	margin-bottom: 80px;
 	border-radius: 15px;
 	z-index: 1;
 }
@@ -218,6 +231,71 @@ textarea:focus {
 	z-index: 1;
 }
 
+.projectsContainer {
+	position: relative;
+	width: 920px;
+	margin: auto;
+	display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+	z-index: 1;
+}
+
+#portfolioProject1 {
+	height: 200px;
+	width: 300px;
+	margin: 10px;
+	background-color: #777777;
+	position: relative;
+	background-image: url('../images/project1.png');
+}
+
+#portfolioProject2 {
+	height: 200px;
+	width: 300px;
+	margin: 10px;
+	background-color: #777777;
+	position: relative;
+	background-image: url('../images/project1.png');
+}
+
+#portfolioProject3 {
+	height: 200px;
+	width: 300px;
+	margin: 10px;
+	background-color: #777777;
+	position: relative;
+	background-image: url('../images/project1.png');
+}
+
+#portfolioProject4 {
+	height: 200px;
+	width: 300px;
+	margin: 10px;
+	background-color: #777777;
+	position: relative;
+	background-image: url('../images/project1.png');
+}
+
+#portfolioProject5 {
+	height: 200px;
+	width: 300px;
+	margin: 10px;
+	background-color: #777777;
+	position: relative;
+	background-image: url('../images/project1.png');
+}
+
+.portfolioDivLabel {
+	position: absolute;
+	bottom: 20px;
+	width: 100%;
+	text-align: center;
+	background-color: #4aaaa5;
+	color: #ffffff;
+	padding: 5px 0px 5px 0px;
+}
+
 .portfolioTitle {
 	position: relative;
 	height: 100px;
@@ -229,6 +307,7 @@ textarea:focus {
 	text-align: center;
 	line-height: 100px;
 	z-index: 20;
+	border-radius: 5px;
 }
 
 .portfolioNavigation {
@@ -247,13 +326,6 @@ textarea:focus {
 	height: 400px;
 	z-index: 2;
 	position: relative;
-}
-
-.imageSocials {
-	position: relative;
-	width: 80px;
-	height: 80px;
-	border-style: none;
 }
 
 .mainText {
